CLIENT-1694: fix dex watchlist select z-index

--- a/src/modules/dex/directives/dexWatchlist/DexWatchlist.less
+++ b/src/modules/dex/directives/dexWatchlist/DexWatchlist.less
@@ -245,7 +245,7 @@ body.dex-demo .dex-wrapper {
         width: 50px;
         height: 36px;
         left: 179px;
-        z-index: 5;
+        z-index: 7;
         top: 3px;
       }
 
